[tool.poetry]
name = "hydravatar"
authors = ["Erik Tollerud <erik.tollerud@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.0"
pygithub = "^2.3.0"
jupyterlab = "^4.2.4"
pillow = "^10.4.0"
tqdm = "^4.66.5"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
